--- a/MPfm/MPfm.WPF/Classes/App.xaml
+++ b/MPfm/MPfm.WPF/Classes/App.xaml
@@ -52,7 +52,7 @@
             <Setter Property="OverridesDefaultStyle" Value="True"/>
             <Setter Property="Foreground" Value="White" />
             <Setter Property="FontSize" Value="12" />
-            <Setter Property="FontFamily" Value="/Resources/Fonts/#TitilliumText22L Lt" />
+            <Setter Property="FontFamily" Value="/Resources/Fonts/#Roboto Regular" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
@@ -88,7 +88,7 @@
             <Setter Property="OverridesDefaultStyle" Value="True"/>
             <Setter Property="Foreground" Value="White" />
             <Setter Property="FontSize" Value="12" />
-            <Setter Property="FontFamily" Value="/Resources/Fonts/#TitilliumText22L Lt" />
+            <Setter Property="FontFamily" Value="/Resources/Fonts/#Roboto Regular" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
@@ -164,8 +164,8 @@
             <!--Set to true to not get any properties from the themes.-->
             <Setter Property="OverridesDefaultStyle" Value="True"/>
             <Setter Property="Foreground" Value="White" />
-            <Setter Property="FontSize" Value="12" />
-            <Setter Property="FontFamily" Value="/Resources/Fonts/#TitilliumText22L Lt" />
+            <Setter Property="FontSize" Value="11" />
+            <Setter Property="FontFamily" Value="/Resources/Fonts/#Roboto Regular" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
