iOS: Added new images for splash screen for every device. Now the splash screen is official and working perfectly everywhere. Fixed crash bug on iOS 6 in Songs tab of MobileLibraryBrowser.

--- a/MPfm/MPfm.iOS/XIB/iPad/SplashViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/SplashViewController_iPad.xib
@@ -38,7 +38,7 @@
                     <rect key="frame" x="300" y="763" width="20" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </activityIndicatorView>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4vB-vx-i3c">
+                <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4vB-vx-i3c">
                     <rect key="frame" x="157" y="870" width="454" height="90"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
