--- a/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -278,7 +278,7 @@
                                                         </StackPanel>
                                                     </Border>
                                                 </StackPanel>
-                                            </Grid>
+                                            </Grid>                                            
                                             <Slider Grid.Row="1" x:Name="sliderTimeShifting" Minimum="50" Value="100" Maximum="150" Margin="0,2,0,6" ValueChanged="SliderTimeShifting_OnValueChanged" />
                                             <Grid Grid.Row="2" HorizontalAlignment="Center">
                                                 <Grid.ColumnDefinitions>
@@ -431,13 +431,8 @@
                                                     <ColumnDefinition Width="30" />
                                                     <ColumnDefinition Width="50" />
                                                 </Grid.ColumnDefinitions>
-                                                <WindowsFormsHost Grid.Column="0">
-                                                    <wc:Fader x:Name="faderVolume" Minimum="0" Maximum="100" OnFaderValueChanged="FaderVolume_OnFaderValueChanged" />
-                                                </WindowsFormsHost>
+                                                <controls:Fader x:Name="faderVolume" Minimum="0" Maximum="100" OnFaderValueChanged="FaderVolume_OnFaderValueChanged" />
                                                 <controls:OutputMeter Grid.Column="1" x:Name="outputMeter" />
-                                                <!--<WindowsFormsHost Grid.Column="1">
-                                                    <wc:OutputMeter x:Name="outputMeter" />
-                                                </WindowsFormsHost>-->
                                             </Grid>
                                             <Label Grid.Row="1" x:Name="lblVolume" Content="100 %" FontSize="12" FontFamily="/Resources/Fonts/#Roboto Regular" Foreground="White" HorizontalContentAlignment="Center" />
                                         </Grid>
