Android: Finally managed to add scale view and wave form view in a scroll view. However the pinch action doesn't work yet. Added Density property to IGraphicsContext. Fixed bugs in WaveFormScaleControl.

--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -52,13 +52,13 @@
         android:paddingTop="4dp"
         android:paddingBottom="6dp" />
   </LinearLayout>
-  <org.sessionsapp.android.WaveFormViewGroup
-      android:id="@+id/player_waveFormView"
+  <org.sessionsapp.android.WaveFormScrollView
+      android:id="@+id/player_waveFormScrollView"
       android:orientation="horizontal"
       android:background="#000000"
       android:layout_width="fill_parent"
       android:layout_height="120dp">
-  </org.sessionsapp.android.WaveFormViewGroup>
+  </org.sessionsapp.android.WaveFormScrollView>
   <FrameLayout
       android:id="@+id/player_linearLayoutSubviews"
       android:orientation="horizontal"
