WPF: Added missing implementations in IGraphicsContext. Implemented MemoryGraphicsContext and MemoryGraphicsContextFactory. Added custom scroll view for displaying the wave form scale and wave form display. the wave form scale works so far but the wave form has problems.

--- a/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -463,9 +463,7 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
-                            <WindowsFormsHost Grid.Row="0">
-                                <wc:WaveFormDisplay x:Name="waveFormDisplay" />
-                            </WindowsFormsHost>
+                            <controls:WaveFormScrollViewer Grid.Row="0" x:Name="scrollViewWaveForm" Height="60" />                            
                             <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="#FF242F35" ShowsPreview="True" Height="4" />
                             <Grid Grid.Row="2">
                                 <Grid.ColumnDefinitions>
